--- a/ode_numerical.ipynb
+++ b/ode_numerical.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -151,13 +151,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1b59a8bc638f4d988fed19b2a78fe3a7",
+       "model_id": "ad4228e274a54357a778baffae8e164a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -200,11 +200,229 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Damping factor:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$${\\displaystyle {\\frac {\\mathrm {d} ^{2}x}{\\mathrm {d} t^{2}}}+2\\zeta \\omega _{0}{\\frac {\\mathrm {d} x}{\\mathrm {d} t}}+\\omega _{0}^{2}x=0,}$$\n",
+    "\n",
+    "Where ${\\displaystyle \\zeta ={\\frac {c}{2{\\sqrt {mk}}}}}$ Damping Ratio"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Solution is \n",
+    "\n",
+    "$$\n",
+    "{\\displaystyle z(t)=A\\mathrm {e} ^{-\\zeta \\omega _{0}t}\\sin \\left({\\sqrt {1-\\zeta ^{2}}}\\omega _{0}t+\\varphi \\right),}\n",
+    "$$\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a80a63b71a474d948b0b264bec940fee",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(FloatSlider(value=1.0, description='A', max=3.0, min=-1.0), FloatSlider(value=0.2, descr…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from ipywidgets import interact\n",
+    "from numpy import vectorize, exp, sin, cos,  sqrt, pi as π\n",
+    "\n",
+    "def sol(A,xi,w0, phi,t):\n",
+    "    if xi > 1:\n",
+    "        raise NotInplementedError(\"overdampded not implmented\")\n",
+    "    return (A*exp(-xi*w0*t)*sin(sqrt(1-xi**2)*w0*t+phi),\n",
+    "           -xi*w0*A*exp(-xi*w0*t)*sin(sqrt(1-xi**2)*w0*t+phi)+\n",
+    "                  A*exp(-xi*w0*t)*cos(sqrt(1-xi**2)*w0*t+phi)*sqrt(1-xi**2)*w0)\n",
+    "\n",
+    "@interact(xi=(-1.0, 2.0))\n",
+    "def oscillator(A=1.0,xi=0.2,w0=1.0, phi=π/4, tmax=20):\n",
+    "\n",
+    "    \n",
+    "    t = sp.linspace(0,tmax, 400)  # NOTE: The  points selected for plotting are \n",
+    "                           # not the points used for the numerical \n",
+    "                           # evalution.\n",
+    "    x,v = sol(A,xi,w0, phi,t)\n",
+    "    \n",
+    "    fig, (ax1, ax2) = plt.subplots(1,2)\n",
+    "    fig.set_figwidth(16)\n",
+    "    ax1.plot(t,x, label='y');\n",
+    "    ax1.plot(t,v, label=\"y'\");\n",
+    "    ax1.axhline(0, color='k', lw=1)\n",
+    "    ax1.set_xlabel(\"$t$\")\n",
+    "    ax1.set_ylabel(\"$x(t)$ and $v(t)$\")\n",
+    "\n",
+    "    ax2.set_xlabel(\"$x$\")\n",
+    "    ax2.set_ylabel(\"$v$\")\n",
+    "    ax2.set_title(\"phase space\")\n",
+    "    ax2.axhline(0, color='k', lw=1)\n",
+    "    ax2.axvline(0, color='k', lw=1)\n",
+    "    ax2.plot(x,v);\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Driving forces:\n",
+    "\n",
+    "$${\\displaystyle {\\frac {\\mathrm {d} ^{2}x}{\\mathrm {d} t^{2}}}+2\\zeta \\omega _{0}{\\frac {\\mathrm {d} x}{\\mathrm {d} t}}+\\omega _{0}^{2}x={\\frac {1}{m}}F_{0}\\sin(\\omega t),}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$${\\displaystyle x(t)={\\frac {F_{0}}{mZ_{m}\\omega }}\\sin(\\omega t+\\varphi ),}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$${\\displaystyle Z_{m}={\\sqrt {\\left(2\\omega _{0}\\zeta \\right)^{2}+{\\frac {1}{\\omega ^{2}}}(\\omega _{0}^{2}-\\omega ^{2})^{2}}}}$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from functools import lru_cache\n",
+    "\n",
+    "def Z(w0, xi, w):\n",
+    "    return sqrt(\n",
+    "        (2*w0*xi)**2+\n",
+    "        (w0**2-w**2)**2 / w**2\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$${\\displaystyle \\varphi =\\arctan \\left({\\frac {2\\omega \\omega _{0}\\zeta }{\\omega ^{2}-\\omega _{0}^{2}}}\\right)+n\\pi }$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from numpy import arctan\n",
+    "\n",
+    "\n",
+    "def phase(xi, w0, w):\n",
+    "    if w == w0:\n",
+    "        return π/2\n",
+    "    return (arctan(\n",
+    "        2*w*w0*xi\n",
+    "        /\n",
+    "        (w**2-w0**2)\n",
+    "    )%π )\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$${\\displaystyle x(t)={\\frac {F_{0}}{mZ_{m}\\omega }}\\sin(\\omega t+\\varphi ),}$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def res(xi,w0, w, t):\n",
+    "    return 1/(Z(w0, xi, w)*w)*sin(w*t+phase(xi,w0,w))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5c9212e1122b4fd08783ecc04d7c42a3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(FloatSlider(value=0.5, description='xi', max=1.5), FloatSlider(value=0.8, description='w…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "ws = np.linspace(0.01, 3, 80)\n",
+    "\n",
+    "res_templates = [1/(Z(1,xit,ws)*ws) for xit in [0.3,0.5,1,2]]\n",
+    "\n",
+    "    \n",
+    "@interact(xi=(0,1.5,0.1), w=(0,3,0.05))\n",
+    "def plot_response(xi=0.5, w=0.8):\n",
+    "    import numpy as np\n",
+    "\n",
+    "    t = np.linspace(0, 20/w, 80)\n",
+    "\n",
+    "    fig, ((ax0,ax), (ax1, aa)) = plt.subplots(2,2)\n",
+    "    fig.set_figwidth(16)\n",
+    "    fig.set_figheight(8)\n",
+    "    ax.plot(ws, 1/(Z(1,xi,ws)*ws))\n",
+    "    \n",
+    "    ax0.plot(t, res(xi, 1, w, t))\n",
+    "    ax0.plot(t, sin(w*t), '--')\n",
+    "    \n",
+    "    for rt in res_templates  :\n",
+    "        ax.plot(ws, rt, '--', lw=0.5)\n",
+    "\n",
+    "        \n",
+    "    xis = np.linspace(0.3,sqrt(2)/2-0.001,20)\n",
+    "    wrs = sqrt(1-2*xis**2)\n",
+    "    \n",
+    "    ax.plot(wrs, [1/(Z(1,xir,wr)*wr) for xir,wr in zip(xis,wrs)], '--',lw=0.5)    \n",
+    "    \n",
+    "    \n",
+    "    ax.axvline(w, color='k', lw=1)\n",
+    "    ax1.axvline(w, color='k', lw=1)\n",
+    "    ax1.axhline(π/2, linestyle='--',  color='k', lw=1,)\n",
+    "    ax1.set_ylim(0, π+0.1)\n",
+    "    ax1.plot(ws, [phase(xi,1,u) for u in ws])\n"
+   ]
   }
  ],
  "metadata": {
