--- a/ode_numerical.ipynb
+++ b/ode_numerical.ipynb
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,12 +340,12 @@
     "\n",
     "def phase(xi, w0, w):\n",
     "    if w == w0:\n",
-    "        return π/2\n",
+    "        return -π/2\n",
     "    return (arctan(\n",
     "        2*w*w0*xi\n",
     "        /\n",
     "        (w**2-w0**2)\n",
-    "    )%π )\n",
+    "    )%π ) -π\n",
     "    "
    ]
   },
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,13 +368,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5c9212e1122b4fd08783ecc04d7c42a3",
+       "model_id": "372db1c820224db782eeb92a3a8c7337",
        "version_major": 2,
        "version_minor": 0
       },
@@ -391,6 +391,7 @@
     "ws = np.linspace(0.01, 3, 80)\n",
     "\n",
     "res_templates = [1/(Z(1,xit,ws)*ws) for xit in [0.3,0.5,1,2]]\n",
+    "phase_templates = [[phase(xit,1,u) for u in ws] for xit in [0.1,0.3,0.5,1,2, 20]]\n",
     "\n",
     "    \n",
     "@interact(xi=(0,1.5,0.1), w=(0,3,0.05))\n",
@@ -406,23 +407,42 @@
     "    \n",
     "    ax0.plot(t, res(xi, 1, w, t))\n",
     "    ax0.plot(t, sin(w*t), '--')\n",
+    "   \n",
     "    \n",
     "    for rt in res_templates  :\n",
     "        ax.plot(ws, rt, '--', lw=0.5)\n",
     "\n",
-    "        \n",
-    "    xis = np.linspace(0.3,sqrt(2)/2-0.001,20)\n",
+    "    # locci of maximum resonnance.    \n",
+    "    xis = np.linspace(min(0.3, xi),sqrt(2)/2-0.001,10)\n",
     "    wrs = sqrt(1-2*xis**2)\n",
-    "    \n",
     "    ax.plot(wrs, [1/(Z(1,xir,wr)*wr) for xir,wr in zip(xis,wrs)], '--',lw=0.5)    \n",
     "    \n",
     "    \n",
     "    ax.axvline(w, color='k', lw=1)\n",
+    "    \n",
     "    ax1.axvline(w, color='k', lw=1)\n",
     "    ax1.axhline(π/2, linestyle='--',  color='k', lw=1,)\n",
-    "    ax1.set_ylim(0, π+0.1)\n",
-    "    ax1.plot(ws, [phase(xi,1,u) for u in ws])\n"
+    "    ax1.set_ylim(-π, 0)\n",
+    "    ax1.set_xlim(0, max(ws))\n",
+    "    ax1.plot(ws, [phase(xi,1,u) for u in ws])\n",
+    "    for pt in phase_templates  :\n",
+    "        ax1.plot(ws, pt, '--', lw=0.5)\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
